Add css style for other_theme

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 
   <body>
     <h1>Dizney Resort</h1>
+
+    <p>Aliquam rhoncus sapien vitae semper interdum. Donec vitae vehicula
+       quam. In at magna gravida nunc finibus accumsan. Maecenas mattis auctor
+       semper. Aliquam porttitor libero sit amet elit consectetur, eget ultrices
+       augue semper. Proin ligula velit, gravida at dapibus id, fermentum id
+       ante. Fusce mollis, leo non porta aliquet, arcu enim euismod magna, at
+       scelerisque dolor enim eu ipsum. Nam blandit efficitur iaculis.
+       Pellentesque eu dolor sit amet ligula tincidunt venenatis.
+    </p>
+
     <h2>For More Information:</h2>
     <ul>
       <li><a href="accommodations.html">Accommodations</a></li>
@@ -15,8 +25,5 @@
       <li><a href="pictures.html">Pictures</a></li>
       <li><a href="contact-information.html">Contact Information</a></li>
     </ul>
-
-    <h2>  </h2>
-    <p> </p>
   </body>
 </html>
