--- a/pictures.html
+++ b/pictures.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Pictures</h1>
     <img src="https://naples.viliving.com/-/media/vi/communities/bentley-village/community-home/1-tall-header/bv_homepage_redev.ashx?h=533&la=en&w=1366&hash=8A4E6E696B16F7B81DDF5401D7B8B3ACE597DCAD" alt="resort">
-    <img src="https://www.careresortchiangmai.com/img/pic5.jpg" alt="old People">
+    <img src="https://www.careresortchiangmai.com/img/pic5.jpg" alt="old People" class="old_people">
 
     <h2>For More Information:</h2>
     <ul>
